Add some benchmark plots

--- a/main.tex
+++ b/main.tex
@@ -1,8 +1,5 @@
 \documentclass[language=polish,type=master]{aghmodern}
 
-%\usepackage{lua-visual-debug}
-\usepackage{lipsum}
-
 \titleEN{Minimizing interaction delay in collaborative web applications}
 \titlePL{Minimalizacja opóźnienia w interakcji użytkowników korzystających z aplikacji webowych}
 \author{Piotr Szczygieł}
@@ -29,16 +26,11 @@
 
 \chapter{Wstęp}
 
-% \begin{figure}
-% \includegraphics[width=\textwidth]{agh-name-color-pl.pdf}
-% \caption{Logo AGH}
-% \label{fig:logoagh}
-% \end{figure}
+\chapter{State of the art}
 
-% To jest logo AGH (\autoref{fig:logoagh}).
 
-% \appendix
-% \chapter{Dodatek 1}
+
+\chapter{WebAssembly}
 
 \backmatter
 
@@ -52,4 +44,3 @@
 \printbibliography
 
 \end{document}
-
