--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,1 +1,43 @@
 % Encoding: UTF-8
+
+@article{wasm_blazor,
+  author  = {Suryś, Dawid and Szłapa, Piotr and Skublewska-Paszkowska, Maria},
+  year    = {2019},
+  month   = {12},
+  pages   = {332-338},
+  title   = {WebAssembly as an alternative solution for JavaScript in developing modern web applications},
+  volume  = {13},
+  journal = {Journal of Computer Sciences Institute},
+  doi     = {10.35784/jcsi.1328}
+}
+
+@inproceedings{wasm_speedyjs,
+  author    = {Reiser, Micha and Bl\"{a}ser, Luc},
+  title     = {Accelerate JavaScript Applications by Cross-Compiling to WebAssembly},
+  year      = {2017},
+  isbn      = {9781450355193},
+  publisher = {Association for Computing Machinery},
+  address   = {New York, NY, USA},
+  url       = {https://doi.org/10.1145/3141871.3141873},
+  doi       = {10.1145/3141871.3141873},
+  abstract  = {Although the performance of today's JavaScript engines is sufficient for most web applications, faster and more predictable runtimes could be desired for performance-critical web code. Therefore, we present Speedy.js, a cross-compiler that translates JavaScript/TypeScript to WebAssembly, a new standard for native execution supported by all major browsers. Speedy.js only imposes minimal restrictions on the JavaScript code, namely that the performance-critical functions are wrapped in TypeScript and only engage a performance-optimal subset of the JavaScript language. With this approach, we manage to make compute-intense web code up to four times faster, while reducing runtime fluctuations to the half.},
+  booktitle = {Proceedings of the 9th ACM SIGPLAN International Workshop on Virtual Machines and Intermediate Languages},
+  pages     = {10-17},
+  numpages  = {8},
+  keywords  = {LLVM, WebAssembly, JavaScript, TypeScript, Cross-Compilation, Optimization},
+  location  = {Vancouver, BC, Canada},
+  series    = {VMIL 2017}
+}
+
+@inproceedings{wasm_native,
+  author    = {Abhinav Jangda and Bobby Powers and Emery D. Berger and Arjun Guha},
+  title     = {Not So Fast: Analyzing the Performance of {WebAssembly} vs. Native Code},
+  booktitle = {2019 USENIX Annual Technical Conference (USENIX ATC 19)},
+  year      = {2019},
+  isbn      = {978-1-939133-03-8},
+  address   = {Renton, WA},
+  pages     = {107--120},
+  url       = {https://www.usenix.org/conference/atc19/presentation/jangda},
+  publisher = {USENIX Association},
+  month     = jul
+}
