Add 5 more citations to state of the art

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -41,3 +41,38 @@
   publisher = {USENIX Association},
   month     = jul
 }
+
+@article{wasm_js_bench,
+  title   = {WebAssembly and JavaScript Challenge: Numerical program performance using modern browser technologies and devices},
+  author  = {Herrera, David and Chen, Hangfen and Lavoie, Erick and Hendren, Laurie},
+  journal = {University of McGill, Montreal: QC, Technical report SABLE-TR-2018-2},
+  year    = {2018}
+}
+
+@inproceedings{wasm_js_bench2,
+  title        = {Empowering Web Applications with WebAssembly: Are We There Yet?},
+  author       = {Wang, Weihang},
+  booktitle    = {2021 36th IEEE/ACM International Conference on Automated Software Engineering (ASE)},
+  pages        = {1301--1305},
+  year         = {2021},
+  organization = {IEEE}
+}
+
+@misc{websocket_webrtc_iot,
+  title  = {Evaluating WebSocket and WebRTC in the Context of a Mobile Internet of Things Gateway},
+  author = {Karadogan, G{\"u}nay Mert},
+  year   = {2014}
+}
+
+@misc{websocket_webrtc_realtime,
+  title  = {Soft Real-Time Communication with WebSocket and WebRTC Protocols Performance Analysis for Web-based Control Loops},
+  year   = {2019},
+  author = {Karla, Tomasz and Tarnawski, Jaros{\l}aw}
+}
+
+@article{websocket_webrtc_streamr,
+  title     = {WebSocket vs WebRTC in the stream overlays of the Streamr Network},
+  author    = {Juslenius, Santeri and others},
+  year      = {2021},
+  publisher = {Helsingin yliopisto}
+}
